# SeamCarving

./: CMakeLists.txt  README.txt  Report.docx  main.cpp
Helpers/: CMakeLists.txt  File.h  StringManip.h  Test.cpp  TranslateNintey.cpp  TranslateNintey.h  create_adjacency_vector.cpp  create_adjacency_vector.h  getFile.cpp  getNum.cpp  outputFile.cpp  translateNinteyR.cpp
SeamCarvingLib/: CMakeLists.txt  SeamCarving.cpp  SeamCarving.h  Test.cpp  TestSeamCarving.cpp  create_energy_matric.cpp  make_energy_cell.cpp  process_deletions.cpp  process_energy_matrix.cpp
