cmake_minimum_required(VERSION 3.15)
project(SeamCarving)
find_package (Threads)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-O3 -march=native -pipe -pthread")
add_executable(SeamCarving main.cpp)
target_link_libraries (SeamCarving ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(SeamCarving Helpers)
target_link_libraries(SeamCarving SeamCarvingLib)
add_subdirectory(Helpers)
add_subdirectory(SeamCarvingLib)